@@ -21,6 +21,7 @@ Imports:
         MCMCpack,
         mnormt,
         pscl,
+        shiny,
         stats
 Depends: 
     R (>= 2.10)
