@@ -3,6 +3,7 @@
 export(bmn)
 export(dissplot)
 export(f2bayes)
+export(f2bca)
 export(f2boot)
 export(f2calc)
 export(f2gpq)
@@ -11,6 +12,7 @@ export(ggdissplot)
 export(hgp)
 export(make_dis_data)
 export(process_results)
+export(runExample)
 importFrom(graphics,legend)
 importFrom(graphics,lines)
 importFrom(graphics,matplot)
