@@ -1,13 +1,13 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/f2gpq.R
-\name{f2gpq}
-\alias{f2gpq}
-\title{Calculation of a generalized pivotal quantity 100*level\% confidence interval for the F2 parameter}
+% Please edit documentation in R/f2bca.R
+\name{f2bca}
+\alias{f2bca}
+\title{Calculation of a biased-corrected and accepted 100*level\% confidence interval for the F2 parameter}
 \usage{
-f2gpq(
+f2bca(
   dis_data,
   level = 0.9,
-  B = 10000,
+  B = 1000,
   ci.type = c("quantile", "HPD"),
   get.dist = FALSE
 )
@@ -21,7 +21,7 @@ dissolution data. See the \code{make_dis_data()} function for the particular str
 
 \item{level}{The confidence level. A value between 0 and 1.}
 
-\item{B}{The number of generalized pivotal quantity samples.}
+\item{B}{A positive integer specifying the number of bootstrap samples.}
 
 \item{ci.type}{The type of confidence interval to report. Specifying \code{quantile} returns a bootstrap confidence interval based on the sample quantiles. Specifying \code{HPD} returns a highest density region interval.}
 
@@ -31,13 +31,17 @@ dissolution data. See the \code{make_dis_data()} function for the particular str
 The function returns a 100*level\% confidence interval for the F2 parameter calculated from the observed dissolution data.
 }
 \description{
-This function calculates a 100*level\% confidence interval for the F2 parameter using generalized pivotal quantity methods based on a two variance component model with means for Time x Group, i.e.,  Dissolution ~ Time x Group + (1|Tablet:Group).
+This function calculates a 100*level\% confidence interval for the F2 parameter using biased-correctd and accelerated (BCa) boostrap
 }
 \note{
 Use the \code{plotdiss()} or \code{ggplotdiss()} function to visually check if it's appropriate to calculate the f2 statistic.
 }
 \examples{
 ### dis_data comes loaded with the package
-f2gpq(dis_data, level = 0.9, B = 10000)
+f2bca(dis_data, level = 0.9, B = 1000)
 
+}
+\references{
+Liu, S. and Cai, X. and Shen, M. and Tsong, Y. (2023). In vitro dissolution profile comparison using bootstrap
+bias corrected similarity factor, f2. Journal of Biopharmaceutical Statistics, 34(1):78-89.
 }
